# rfofs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  polyphony_limit.md
.cargo/: config.toml
benches/: fast_sin.rs  parallel_fofs.rs  process_block.rs
examples/: find_polyphony_limit.rs  plot_single_fof.rs  profile_compute.rs
rfofs-client/: Cargo.toml  README.md  rfofs_client.h
rfofs-client/examples/: shm_client_smoke.rs
rfofs-client/src/: lib.rs
src/: clock.rs  engine.rs  fastsin.rs  fof.rs  lib.rs  main.rs  offline.rs  pan.rs  queue.rs  shm.rs
tests/: continuous_fofs.rs  jack_server_fof.rs  offline_render.rs  online_stress.rs
