[package]
name = "rfofs"
version = "0.1.0"
edition = "2024"
 
[[bin]]
name = "rfofs"
path = "src/main.rs"
 
[lib]
name = "rfofs"
path = "src/lib.rs"
 
[dependencies]
# Audio I/O
jack = "0.13"

# Sound file output for offline rendering
sndfile = "0.1"
 
# Lock-free queues
rtrb = "0.3"          # lock-free SPSC ring buffer (audio-safe)
 
# Slab allocator for active FOF pool
slab = "0.4"
 
# Logging (non-allocating on hot path via log facade)
log = "0.4"
env_logger = "0.11"

# Portable SIMD for the FOF synthesis hot path
wide = "1.5"

[features]
# Use f32::sin (via active_sin in src/fastsin.rs) instead of the LUT for the
# FOF carrier/attack sine — for isolating how much of the synthesis cost is
# the LUT vs. everything else, or chasing a suspected quantization artifact.
std-sin = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "process_block"
harness = false

[[bench]]
name = "parallel_fofs"
harness = false

[[bench]]
name = "fast_sin"
harness = false

[profile.release]
opt-level = 3
lto = true
 
[profile.release.package."*"]
opt-level = 3
 
